[package]
name = "farmsync"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
anyhow = "1.0.95"
tokio-util = "0.7.13"
futures-util = "0.3.31"
hyper-tungstenite = "0.17.0"
tungstenite = "0.26.1"
futures = "0.3.31"
itertools = "0.14.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_qs = "0.13.0"
sqlite = "0.36.1"